--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
               <td>2</td>
             </tr>
             <tr>
-              <td>3</td>
+              <td>3
+                <ul class="list-group">
+                  <li>Vostok 3 & 6 launched</li>
+                </ul>
+              </td>
               <td>4</td>
               <td>5</td>
               <td>6</td>
@@ -49,11 +53,20 @@
             </tr>
             <tr>
               <td>10</td>
-              <td>11</td>
+              <td>11
+                <ul class="list-group">
+                  <li>Rememberance Day</li>
+                  <li>Kosmos 21 failed to escape orbit</li>
+                </ul></td>
               <td>12</td>
               <td>13</td>
               <td>14</td>
-              <td>15</td>
+              <td>15
+                <ul class="list-group">
+                  <li>Surtsey Island created</li>
+                  <li>Robert W. Smith set altitude record</li>
+                </ul>
+              </td>
               <td>16</td>
             </tr>
             <tr>
@@ -61,14 +74,30 @@
               <td>18</td>
               <td>19</td>
               <td>20</td>
-              <td>21</td>
-              <td>22</td>
-              <td>23</td>
+              <td>21
+                <ul class="list-group">
+                  <li>India launched its first rocket</li>
+                </ul>
+              </td>
+              <td>22
+                <ul class="list-group">
+                  <li>Death of Aldous Huxley</li>
+                </ul>
+              </td>
+              <td>23
+                <ul class="list-group">
+                  <li>Doctor Who premiered</li>
+                </ul>
+              </td>
             </tr>
             <tr>
               <td>24</td>
               <td>25</td>
-              <td>26</td>
+              <td>26
+                <ul class="list-group">
+                  <li>Explorer 18 launched</li>
+                </ul>
+              </td>
               <td>27</td>
               <td>28</td>
               <td>29</td>
